Fix Bug 383381 - Getting the feed URL from a youtube channel no longer works

BUG: 383381
FIXED-IN: 5.65.0